[gd_scene format=3 uid="uid://dp1rk6w8n52gq"]

[ext_resource type="Script" path="res://scripts/lobby/lobby_screen.gd" id="1_lobby"]

[sub_resource type="StyleBoxFlat" id="top_bar_bg"]
bg_color = Color(0.98, 0.94, 0.95, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
content_margin_left = 20.0
content_margin_top = 14.0
content_margin_right = 20.0
content_margin_bottom = 14.0

[sub_resource type="StyleBoxFlat" id="card_panel"]
bg_color = Color(0.98, 0.95, 0.96, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 16.0
content_margin_top = 16.0
content_margin_right = 16.0
content_margin_bottom = 16.0

[sub_resource type="StyleBoxFlat" id="content_card"]
bg_color = Color(0.99, 0.96, 0.96, 0.98)
corner_radius_top_left = 26
corner_radius_top_right = 26
corner_radius_bottom_right = 26
corner_radius_bottom_left = 26
shadow_color = Color(0.85, 0.8, 0.78, 0.6)
shadow_size = 20
shadow_offset = Vector2(0, 10)
content_margin_left = 12.0
content_margin_top = 12.0
content_margin_right = 12.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="green_btn"]
bg_color = Color(0.78, 0.9, 0.82, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="green_btn_hover"]
bg_color = Color(0.84, 0.94, 0.86, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="green_btn_pressed"]
bg_color = Color(0.72, 0.86, 0.78, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="room_btn"]
bg_color = Color(0.98, 0.95, 0.96, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.86, 0.8, 0.82, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
content_margin_left = 16.0
content_margin_top = 14.0
content_margin_right = 16.0
content_margin_bottom = 14.0

[sub_resource type="StyleBoxFlat" id="room_btn_hover"]
bg_color = Color(0.99, 0.97, 0.98, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.9, 0.85, 0.86, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
content_margin_left = 16.0
content_margin_top = 14.0
content_margin_right = 16.0
content_margin_bottom = 14.0

[sub_resource type="StyleBoxFlat" id="red_btn"]
bg_color = Color(0.98, 0.8, 0.82, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="red_btn_hover"]
bg_color = Color(0.99, 0.86, 0.88, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="orange_btn"]
bg_color = Color(0.87, 0.86, 0.98, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="orange_btn_hover"]
bg_color = Color(0.9, 0.9, 0.99, 1)
corner_radius_top_left = 22
corner_radius_top_right = 22
corner_radius_bottom_right = 22
corner_radius_bottom_left = 22
content_margin_left = 20.0
content_margin_top = 12.0
content_margin_right = 20.0
content_margin_bottom = 12.0

[sub_resource type="StyleBoxFlat" id="player_slot"]
bg_color = Color(0.98, 0.95, 0.96, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.86, 0.8, 0.82, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18
content_margin_left = 14.0
content_margin_top = 10.0
content_margin_right = 14.0
content_margin_bottom = 10.0

[sub_resource type="Shader" id="dot_shader"]
code = "shader_type canvas_item;\n\nuniform float density = 120.0;\nuniform float size = 0.25;\nuniform vec4 dot_color : source_color = vec4(1.0, 0.9, 0.8, 0.08);\n\nvoid fragment() {\n\tvec2 uv = FRAGCOORD.xy / density;\n\tvec2 gv = fract(uv) - 0.5;\n\tfloat d = length(gv);\n\tfloat m = smoothstep(size, 0.0, d);\n\tCOLOR = vec4(dot_color.rgb, dot_color.a * m);\n}\n"

[sub_resource type="ShaderMaterial" id="dot_mat"]
shader = SubResource("dot_shader")
shader_parameter/density = 150.0
shader_parameter/size = 0.22
shader_parameter/dot_color = Color(1, 0.9, 0.8, 0.08)

[node name="LobbyScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.98, 0.96, 0.97, 1)

[node name="WarmGlowTop" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 420.0
grow_horizontal = 2
color = Color(0.92, 0.86, 0.96, 0.5)

[node name="WarmGlowBottom" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -320.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.85, 0.93, 0.98, 0.6)

[node name="DotPattern" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
material = SubResource("dot_mat")

[node name="VBoxMain" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="TopBar" type="PanelContainer" parent="VBoxMain"]
layout_mode = 2
theme_override_styles/panel = SubResource("top_bar_bg")

[node name="HBox" type="HBoxContainer" parent="VBoxMain/TopBar"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="VBoxMain/TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.35, 0.25, 0.22, 1)
theme_override_font_sizes/font_size = 24
text = "Ìã∞Ï∏Ñ ÎùºÏö¥ÏßÄ"

[node name="NicknameLabel" type="Label" parent="VBoxMain/TopBar/HBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.55, 0.48, 0.46, 1)
theme_override_font_sizes/font_size = 18
horizontal_alignment = 2

[node name="Content" type="MarginContainer" parent="VBoxMain"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 16

[node name="ContentCard" type="PanelContainer" parent="VBoxMain/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("content_card")

[node name="CardMargin" type="MarginContainer" parent="VBoxMain/Content/ContentCard"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="LobbyPanel" type="VBoxContainer" parent="VBoxMain/Content/ContentCard/CardMargin"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="RoomListHeader" type="HBoxContainer" parent="VBoxMain/Content/ContentCard/CardMargin/LobbyPanel"]
layout_mode = 2

[node name="RoomListLabel" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/LobbyPanel/RoomListHeader"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.55, 0.48, 0.46, 1)
theme_override_font_sizes/font_size = 16
text = "ÏßÄÍ∏à Ïó¥Î†§ÏûàÎäî Î∞©"

[node name="RefreshButton" type="Button" parent="VBoxMain/Content/ContentCard/CardMargin/LobbyPanel/RoomListHeader"]
layout_mode = 2
custom_minimum_size = Vector2(44, 36)
theme_override_font_sizes/font_size = 16
text = "‚Üª"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxMain/Content/ContentCard/CardMargin/LobbyPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="RoomList" type="VBoxContainer" parent="VBoxMain/Content/ContentCard/CardMargin/LobbyPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NoRoomsLabel" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/LobbyPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.56, 0.54, 1)
theme_override_font_sizes/font_size = 18
text = "Î∞©Ïù¥ ÏóÜÏñ¥Ïöî!
ÏßÄÍ∏à Î∞îÎ°ú ÎßåÎì§Ïñ¥Î≥ºÍπåÏöî?"
horizontal_alignment = 1
autowrap_mode = 2

[node name="CreateRoomButton" type="Button" parent="VBoxMain/Content/ContentCard/CardMargin/LobbyPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("green_btn")
theme_override_styles/hover = SubResource("green_btn_hover")
theme_override_styles/pressed = SubResource("green_btn_pressed")
text = "üê• Î∞© ÎßåÎì§Í∏∞"

[node name="RoomPanel" type="VBoxContainer" parent="VBoxMain/Content"]
visible = false
layout_mode = 2
theme_override_constants/separation = 14

[node name="RoomNameLabel" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.35, 0.25, 0.22, 1)
theme_override_font_sizes/font_size = 26
text = "Î∞© Ïù¥Î¶Ñ"
horizontal_alignment = 1

[node name="TeamALabel" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.65, 0.78, 0.92, 1)
theme_override_font_sizes/font_size = 16
text = "TEAM A"
horizontal_alignment = 1

[node name="PlayerSlot1" type="PanelContainer" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("player_slot")

[node name="Label" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel/PlayerSlot1"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[ÎåÄÍ∏∞ Ï§ë...]"
horizontal_alignment = 1

[node name="PlayerSlot2" type="PanelContainer" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("player_slot")

[node name="Label" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel/PlayerSlot2"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[ÎåÄÍ∏∞ Ï§ë...]"
horizontal_alignment = 1

[node name="TeamBLabel" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.96, 0.72, 0.78, 1)
theme_override_font_sizes/font_size = 16
text = "TEAM B"
horizontal_alignment = 1

[node name="PlayerSlot3" type="PanelContainer" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("player_slot")

[node name="Label" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel/PlayerSlot3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[ÎåÄÍ∏∞ Ï§ë...]"
horizontal_alignment = 1

[node name="PlayerSlot4" type="PanelContainer" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("player_slot")

[node name="Label" type="Label" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel/PlayerSlot4"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "[ÎåÄÍ∏∞ Ï§ë...]"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartButton" type="Button" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 56)
theme_override_font_sizes/font_size = 22
theme_override_styles/normal = SubResource("orange_btn")
theme_override_styles/hover = SubResource("orange_btn_hover")
text = "Í≤åÏûÑ ÏãúÏûë!"

[node name="LeaveButton" type="Button" parent="VBoxMain/Content/ContentCard/CardMargin/RoomPanel"]
layout_mode = 2
custom_minimum_size = Vector2(0, 48)
theme_override_font_sizes/font_size = 18
theme_override_styles/normal = SubResource("red_btn")
theme_override_styles/hover = SubResource("red_btn_hover")
text = "üö™ ÎÇòÍ∞ÄÍ∏∞"

[node name="StatusLabel" type="Label" parent="VBoxMain"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.56, 0.54, 1)
theme_override_font_sizes/font_size = 15
text = ""
horizontal_alignment = 1

[node name="CreateRoomDialog" type="AcceptDialog" parent="."]
title = "Î∞© ÎßåÎì§Í∏∞"
size = Vector2i(500, 200)
ok_button_text = "ÎßåÎì§Í∏∞"

[node name="VBox" type="VBoxContainer" parent="CreateRoomDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 492.0
offset_bottom = 150.0
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CreateRoomDialog/VBox"]
layout_mode = 2
text = "Î∞© Ïù¥Î¶ÑÏùÑ ÏûÖÎ†•ÌïòÏÑ∏Ïöî"

[node name="RoomNameInput" type="LineEdit" parent="CreateRoomDialog/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 48)
placeholder_text = "Î∞© Ïù¥Î¶Ñ"
max_length = 30
